# pyroots

./: .bumpversion.cfg  .travis.yml  LICENSE  README.md  license.txt  pyproject.toml  readme.rst  setup.py
pyroots/: __init__.py  base.py  bisect.py  brent.py  ridder.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_boundaries.py  test_nearly_equal.py
