[tool.poetry]
name = "pyroots"
version = "0.4.0"
description = "Pure python single variable function solvers"
homepage = "https://github.com/pmav99/pyroots"
repository = "https://github.com/pmav99/pyroots"
documentation = "https://github.com/pmav99/pyroots"
readme = "readme.rst"
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
keywords = ["numeric analysis", "brent", "bisect", "ridder", "solver", "univariate"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
